default/objects/Volumenreport__c/Volumenreport__c.object-meta.xml
<CustomObject>
    <label>Volumenreport</label>
    <nameField>
        <displayFormat>Volumen-{00000000}</displayFormat>
        <label>Volumenreport-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volumenreport</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>