default/objects/Volumenreport__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account-ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>