default/objects/Volumenreport__c/fields/Accountname__c.field-meta.xml
<CustomField>
    <fullName>Accountname__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Accountname</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Volumenreport</relationshipLabel>
    <relationshipName>Volumenreport</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>