default/objects/Volumenreport__c/fields/CardUsed__c.field-meta.xml
<CustomField>
    <fullName>CardUsed__c</fullName>
    <label>CardUsed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>