default/objects/Volumenreport__c/fields/Datum__c.field-meta.xml
<CustomField>
    <fullName>Datum__c</fullName>
    <label>Datum</label>
    <type>Date</type>
</CustomField>