default/objects/Volumenreport__c/fields/GFN__c.field-meta.xml
<CustomField>
    <fullName>GFN__c</fullName>
    <label>GFN</label>
    <length>12</length>
    <type>Text</type>
</CustomField>