default/objects/Volumenreport__c/fields/Kalenderjahr__c.field-meta.xml
<CustomField>
    <fullName>Kalenderjahr__c</fullName>
    <label>Kalenderjahr</label>
    <length>4</length>
    <type>Text</type>
</CustomField>