default/objects/Volumenreport__c/fields/KW__c.field-meta.xml
<CustomField>
    <fullName>KW__c</fullName>
    <label>KW</label>
    <length>4</length>
    <type>Text</type>
</CustomField>