default/objects/Volumenreport__c/fields/Projected_Volume__c.field-meta.xml
<CustomField>
    <fullName>Projected_Volume__c</fullName>
    <label>Projected Volume</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>