default/objects/Volumenreport__c/fields/Sales_Force_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Force_Number__c</fullName>
    <label>Sales Force Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>