default/objects/Volumenreport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Accountname__c</columns>
    <columns>KW__c</columns>
    <columns>CardUsed__c</columns>
    <columns>Quantity__c</columns>
    <columns>Projected_Volume__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Datum__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
    <language>de</language>
</ListView>